fix: overflow styling and tsconfig
Added explicit overflow to body considering prod environment

disable strict null checks in tsconfig

--- a/phone/src/main.css
+++ b/phone/src/main.css
@@ -7,6 +7,9 @@ body {
   font-size: 20px;
   margin: 0;
   padding: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 code {
